Refactor classes. Start using Spring Boot. Reduce number of dependencies